# ubuntu-package-downloader

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  pyproject.toml
.github/workflows/: python-package-release.yml  python-package.yml
src/ubuntu_package_downloader/: __init__.py  config.py  config.yml  main.py  ubuntu_package_downloader.py
