bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_pkg", version = "1.1.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
use_repo(pip, "pip")

use_repo(python, "python_3_13")
